# Build-it-for-me

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
build_loop/: contract.py  engine.py  environment.py  freeform_journal.py  freeform_retry.py  llm.py  main.py  plan_validation.py  policy.py  routing.py  runtime.py  safety.py  schemas.py  verifier.py  web.py
build_loop/agents/: acceptance.py  architect.py  base.py  builder.py  debugger.py  executor.py  integrator.py  optimizer.py  planner.py  researcher.py  reviewer.py  spec_compiler.py
build_loop/analysis/: archetype_checks.py  contract_validation.py  exports.py  framework_hints.py  post_write.py  readme_validation.py  signal_derivation.py
build_loop/common/: pipeline.py
build_loop/eval/: __main__.py  (+5 more)
build_loop/templates/fixtures/fastapi_service/: ownership.json  pyproject.toml  requirements.txt
build_loop/templates/fixtures/fastapi_service/src/: app.py  models.py  routes.py
build_loop/templates/fixtures/fastapi_service/tests/: conftest.py
build_loop/templates/fixtures/python_cli/: ownership.json  pyproject.toml  requirements.txt
build_loop/templates/fixtures/python_cli/src/: __init__.py  cli.py  core.py
docs/: RFC-001-architecture-split.md
tests/: test_abstractions.py  test_analysis.py  test_capability.py  test_contract.py  test_environment.py  test_eval.py  test_freeform_journal.py  test_freeform_retry.py  test_gates.py  test_high_impact.py  test_plan_validation.py  test_policy.py  test_post_write.py  test_safety.py  test_state.py  test_templates.py  test_verifier.py  test_web.py
(+19 files in other folders)
