[project]
name = "{{project_name}}"
version = "0.1.0"
description = "{{summary}}"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
{{project_name}} = "src.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
